--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hexo-theme-aurora",
+  "name": "hexo-theme-aurora-s",
   "version": "0.0.0-semantic-release",
-  "description": "Futuristic auroral theme for Hexo.",
-  "author": "Benny Guo <bennyxguo6@gmail.com>",
+  "description": "Modified version of auroral theme for Hexo.",
+  "author": "Tim-Saijun <yangzair@outlook.com>",
   "license": "MIT",
   "repository": "https://github.com/auroral-ui/hexo-theme-aurora",
   "keywords": [
